attached_assets/Pasted--Configuring-done-0-0s-Generating-done-0-0s-Build-files-have-been-written-to-home-ru-1743750563236.txt
-- Configuring done (0.0s)
-- Generating done (0.0s)
-- Build files have been written to: /home/runner/workspace/ai_language/build
[  6%] Building CXX object CMakeFiles/ai_language_lib.dir/src/interpreters/BaseInterpreter.cpp.o
In file included from /home/runner/workspace/ai_language/src/interpreters/BaseInterpreter.cpp:1:
/home/runner/workspace/ai_language/src/interpreters/../../include/interpreters/BaseInterpreter.h:91:17: error: redeclaration of ‘std::string ai_language::BaseInterpreter::modelType’
   91 |     std::string modelType;
      |                 ^~~~~~~~~
/home/runner/workspace/ai_language/src/interpreters/../../include/interpreters/BaseInterpreter.h:35:17: note: previous declaration ‘std::string ai_language::BaseInterpreter::modelType’
   35 |     std::string modelType = "";
      |                 ^~~~~~~~~
/home/runner/workspace/ai_language/src/interpreters/BaseInterpreter.cpp:92:5: error: expected unqualified-id before ‘else’
   92 |     else if (command == "plot") {
      |     ^~~~
/home/runner/workspace/ai_language/src/interpreters/BaseInterpreter.cpp:95:5: error: expected unqualified-id before ‘else’
   95 |     else if (command == "inspect") {
      |     ^~~~
/home/runner/workspace/ai_language/src/interpreters/BaseInterpreter.cpp:103:5: error: expected unqualified-id before ‘else’
  103 |     else if (command == "validate") {
      |     ^~~~
/home/runner/workspace/ai_language/src/interpreters/BaseInterpreter.cpp:111:5: error: expected unqualified-id before ‘else’
  111 |     else if (command == "preprocess") {
      |     ^~~~
/home/runner/workspace/ai_language/src/interpreters/BaseInterpreter.cpp:119:5: error: expected unqualified-id before ‘else’
  119 |     else if (command == "split") {
      |     ^~~~
/home/runner/workspace/ai_language/src/interpreters/BaseInterpreter.cpp:127:5: error: expected unqualified-id before ‘else’
  127 |     else if (command == "predict") {
      |     ^~~~
/home/runner/workspace/ai_language/src/interpreters/BaseInterpreter.cpp:131:5: error: expected unqualified-id before ‘else’
  131 |     else if (command == "list" && parts.size() > 1 && parts[1] == "models") {
      |     ^~~~
/home/runner/workspace/ai_language/src/interpreters/BaseInterpreter.cpp:134:5: error: expected unqualified-id before ‘else’
  134 |     else if (command == "delete") {
      |     ^~~~
/home/runner/workspace/ai_language/src/interpreters/BaseInterpreter.cpp:142:5: error: expected unqualified-id before ‘else’
  142 |     else if (command == "compare" && parts.size() > 1 && parts[1] == "models") {
      |     ^~~~
/home/runner/workspace/ai_language/src/interpreters/BaseInterpreter.cpp:145:5: error: expected unqualified-id before ‘else’
  145 |     else if (command == "check" && parts.size() > 1 && parts[1] == "status") {
      |     ^~~~
/home/runner/workspace/ai_language/src/interpreters/BaseInterpreter.cpp:148:5: error: expected unqualified-id before ‘else’
  148 |     else if (command == "debug") {
      |     ^~~~
/home/runner/workspace/ai_language/src/interpreters/BaseInterpreter.cpp:152:5: error: expected unqualified-id before ‘else’
  152 |     else if (command == "cross_validate") {
      |     ^~~~
/home/runner/workspace/ai_language/src/interpreters/BaseInterpreter.cpp:156:5: error: expected unqualified-id before ‘else’
  156 |     else if (command == "export") {
      |     ^~~~
/home/runner/workspace/ai_language/src/interpreters/BaseInterpreter.cpp:164:5: error: expected unqualified-id before ‘else’
  164 |     else if (command == "schedule") {
      |     ^~~~
make[2]: *** [CMakeFiles/ai_language_lib.dir/build.make:76: CMakeFiles/ai_language_lib.dir/src/interpreters/BaseInterpreter.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:88: CMakeFiles/ai_language_lib.dir/all] Error 2
make: *** [Makefile:91: all] Error 2